--- a/style.css
+++ b/style.css
@@ -30,5 +30,104 @@ h6 {
 
 img {
   max-width: 100%;
-  max-height: 80vh;
+}
+
+/* main */
+main {
+  padding: 1.5em;
+  position: relative;
+  line-height: 1.5;
+}
+
+.profile-pic-container {
+  position: relative;
+}
+
+.profile-pic {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 2px 5px 5px rgba(50, 50, 93, 0.25);
+}
+
+.name {
+  position: absolute;
+  left: 5px;
+  bottom: 0;
+  text-shadow: 1em;
+}
+
+main h2 {
+  text-align: center;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.icons img {
+  width: 40px;
+}
+
+/* work section */
+.work-section {
+  padding: 1.5em;
+}
+
+.work-section h2 {
+  text-align: center;
+}
+
+.project {
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.project + .project {
+  margin-top: 50px;
+}
+
+.project-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.project-details {
+  position: relative;
+  padding: 0.5em 1.5em;
+}
+
+.project-details .icons {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+}
+
+.project-details .icons img {
+  width: 25px;
+}
+
+/* footer */
+footer > div {
+  padding: 1.5em;
+  background-color: rgb(56, 178, 226);
+  color: white;
+}
+
+footer > div img:not(.icons img) {
+  display: none;
+}
+
+footer .icons {
+  margin: 2em 0;
+}
+
+footer > img {
+  border-radius: 0px;
 }
